# GD-Agentic-Skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PARTNERS.md  README.md  skills_index.json  update_skills_index.py
.cursor/rules/: no-utf8-bom.mdc
.github/workflows/: star-history.yml
docs/internal/: godot-4.7-migration-digest.md
scripts/: generate_star_history.py
skills/godot-2d-animation/: SKILL.md
skills/godot-2d-physics/: SKILL.md
skills/godot-3d-lighting/: SKILL.md
skills/godot-3d-materials/: SKILL.md
skills/godot-3d-world-building/: SKILL.md
skills/godot-ability-system/: SKILL.md
skills/godot-adapt-2d-to-3d/: SKILL.md
skills/godot-adapt-3d-to-2d/: SKILL.md
skills/godot-adapt-desktop-to-mobile/: SKILL.md
skills/godot-adapt-mobile-to-desktop/: SKILL.md
skills/godot-adapt-single-to-multiplayer/: SKILL.md
skills/godot-ai-navigation/: SKILL.md
skills/godot-analyst/: SKILL.md
skills/godot-animation-player/: SKILL.md
skills/godot-animation-tree-mastery/: SKILL.md
skills/godot-audio-systems/: SKILL.md
skills/godot-auditor/: SKILL.md
skills/godot-autoload-architecture/: SKILL.md
skills/godot-builder/: SKILL.md
skills/godot-camera-systems/: SKILL.md
skills/godot-characterbody-2d/: SKILL.md
skills/godot-combat-system/: SKILL.md
skills/godot-composition/: SKILL.md
skills/godot-composition-apps/: SKILL.md
skills/godot-debugging-profiling/: SKILL.md
skills/godot-dialogue-system/: SKILL.md
skills/godot-economy-system/: SKILL.md
skills/godot-export-builds/: SKILL.md
skills/godot-game-loop-collection/: SKILL.md
skills/godot-game-loop-harvest/: SKILL.md
skills/godot-game-loop-time-trial/: SKILL.md
skills/godot-game-loop-waves/: SKILL.md
skills/godot-gdscript-mastery/: SKILL.md
skills/godot-genre-action-rpg/: SKILL.md
skills/godot-genre-battle-royale/: SKILL.md
skills/godot-genre-card-game/: SKILL.md
skills/godot-genre-educational/: SKILL.md
skills/godot-genre-fighting/: SKILL.md
skills/godot-genre-horror/: SKILL.md
skills/godot-genre-idle-clicker/: SKILL.md
skills/godot-genre-metroidvania/: SKILL.md
skills/godot-genre-moba/: SKILL.md
skills/godot-genre-open-world/: SKILL.md
skills/godot-genre-party/: SKILL.md
skills/godot-genre-platformer/: SKILL.md
skills/godot-genre-puzzle/: SKILL.md
skills/godot-genre-racing/: SKILL.md
skills/godot-genre-rhythm/: SKILL.md
skills/godot-genre-roguelike/: SKILL.md
skills/godot-genre-romance/: SKILL.md
skills/godot-genre-rts/: SKILL.md
skills/godot-genre-sandbox/: SKILL.md
skills/godot-genre-shooter/: SKILL.md
skills/godot-genre-shooter-fps/: SKILL.md
skills/godot-genre-simulation/: SKILL.md
skills/godot-genre-sports/: SKILL.md
skills/godot-genre-stealth/: SKILL.md
skills/godot-genre-survival/: SKILL.md
skills/godot-genre-tower-defense/: SKILL.md
skills/godot-genre-visual-novel/: SKILL.md
skills/godot-input-handling/: SKILL.md
skills/godot-inventory-system/: SKILL.md
skills/godot-master/: SKILL.md
skills/godot-mechanic-revival/: SKILL.md
skills/godot-mechanic-secrets/: SKILL.md
skills/godot-monte-carlo-balancer/: SKILL.md
skills/godot-monte-carlo-balancer/scripts/balance-lab-template/: Cargo.toml
skills/godot-monte-carlo-balancer/scripts/balance-lab-template/src/: main.rs
skills/godot-monte-carlo-balancer/templates/: Cargo.toml  launcher.ps1  launcher.sh
skills/godot-multiplayer-networking/: SKILL.md
skills/godot-navigation-pathfinding/: SKILL.md
skills/godot-particles/: SKILL.md
skills/godot-performance-optimization/: SKILL.md
skills/godot-physics-3d/: SKILL.md
skills/godot-platform-console/: SKILL.md
skills/godot-platform-desktop/: SKILL.md
skills/godot-platform-mobile/: SKILL.md
skills/godot-platform-vr/: SKILL.md
skills/godot-platform-web/: SKILL.md
skills/godot-procedural-generation/: SKILL.md
skills/godot-project-foundations/: SKILL.md
skills/godot-project-templates/: SKILL.md
(+1816 files in other folders)
