# Proven dependency set for a source-driven Monte Carlo balance simulator.
# Rename the package per game, e.g. "balance-lab".

[package]
name = "balance-lab"
version = "1.0.0"
edition = "2021"
description = "High-performance, source-driven balance simulator"

[dependencies]
anyhow = "1.0"                                                  # ergonomic error contexts for extraction failures
clap = { version = "4.5", features = ["derive"] }               # CLI: inspect / simulate / career / mode / bruteforce / gen-*
indexmap = { version = "2.10", features = ["serde"] }           # source-order-stable maps for reports and JSON diffs
rand = { version = "0.9", features = ["small_rng"] }            # SmallRng, seeded per run
rand_distr = "0.5"                                              # LogNormal for human reaction delays
rayon = "1.10"                                                  # parallelize independent (level x style x loadout) jobs
# Prefer .tres/Resource deserialization; keep regex for inline formula coefficients only.
regex = "1.11"                                                  # GDScript/formula extraction fallback
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] } # stable --json output for agents and regression snapshots
# Optional when parsing Godot .tres as text / YAML-like dumps:
# serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
# =============================================================================
# GDSkills research links (agents) — does not affect runtime
# Official docs:
# - https://docs.godotengine.org/en/stable/tutorials/scripting/resources.html
# - https://docs.godotengine.org/en/stable/classes/class_json.html
# - https://docs.godotengine.org/en/stable/tutorials/editor/command_line_tutorial.html
# Related skills:
# - https://github.com/thedivergentai/gd-agentic-skills/blob/main/skills/godot-resource-data-patterns/SKILL.md — Resource-first extract
# - https://github.com/thedivergentai/gd-agentic-skills/blob/main/skills/godot-testing-patterns/SKILL.md — Phase 7 headless calibration
# Parent skill: https://github.com/thedivergentai/gd-agentic-skills/blob/main/skills/godot-monte-carlo-balancer/SKILL.md
# =============================================================================
